# helowrite

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  app.py.wrapper  command_palette_template.md  cursortest.py  dev.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  tag_release.py  test.md
.github/workflows/: python-app.yml  release.yml
src/: app.py  audio_playback.py  config.py  constants.py  git_sync.py  pomodoro.py  screens.py  search.py  snippets.py  styles.py  themes.py  utils.py  widgets.py
src/css/: app.tcss  screens.tcss  widgets.tcss
tests/: conftest.py  test_app.py  test_audio_playback.py  test_config.py  test_git_sync.py  test_lint.py  test_markdown_highlight_perf.py  test_pomodoro.py  test_search.py  test_settings_interaction.py  test_snippets.py  test_themes.py  test_typecheck.py  test_typewriter_scroll_perf.py  test_utils.py  test_widgets.py
